# aurora_remote_sdk_demo

./: .gitignore  CMakeLists.txt  Changelog.md  README.md  README.zh-CN.md
aurora_remote_public/: version.txt
aurora_remote_public/include/: aurora_pubsdk_common_def.h  aurora_pubsdk_inc.h  aurora_pubsdk_objects.h
aurora_remote_public/include/cxx/: slamtec_remote_objects.hxx  slamtec_remote_public.hxx
aurora_remote_public/lib/win64/: slamtec_aurora_remote_sdk.lib
demo/calibration_exporter/: README.md  README.zh-CN.md
demo/calibration_exporter/src/: calibration_exporter.cpp
demo/depthcam_view/: README.md  README.zh-CN.md
demo/depthcam_view/src/: depthcam_view.cpp
demo/device_info_monitor/: README.md  README.zh-CN.md
demo/device_info_monitor/src/: device_info_monitor.cpp
demo/frame_preview/: README.md  README.zh-CN.md
demo/frame_preview/src/: frame_preview.cpp
demo/imu_fetcher/: README.md  README.zh-CN.md
demo/imu_fetcher/src/: imu_fetcher.cpp
demo/lidar_2dmap_render/: README.md  README.zh-CN.md
demo/lidar_2dmap_render/src/: lidar_2dmap_render.cpp
demo/lidar_scan_plot/: README.md  README.zh-CN.md
demo/lidar_scan_plot/src/: lidar_scan_plot.cpp
demo/map_render/: README.md  README.zh-CN.md
demo/map_render/src/: map_render.cpp
demo/pure_c_demo/: README.md  README.zh-CN.md
demo/pure_c_demo/src/: pure_c_demo.c
demo/relocalization/: README.md  README.zh-CN.md
demo/relocalization/src/: relocalization.cpp
demo/semantic_segmentation/: README.md  README.zh-CN.md
demo/semantic_segmentation/src/: semantic_segmentation.cpp
demo/simple_pose/: README.md  README.zh-CN.md
demo/simple_pose/src/: simple_pose.cpp
demo/vslam_map_saveload/: README.md  README.zh-CN.md
demo/vslam_map_saveload/src/: vslam_map_saveload.cpp
doc/html/: annotated.html  annotated_dup.js  aurora__pubsdk__common__def_8h_source.html  aurora__pubsdk__inc_8h_source.html  aurora__pubsdk__objects_8h_source.html  classes.html  classrp_1_1standalone_1_1aurora_1_1DataRecorder-members.html  classrp_1_1standalone_1_1aurora_1_1DataRecorder.html  classrp_1_1standalone_1_1aurora_1_1DataRecorder.js  classrp_1_1standalone_1_1aurora_1_1EnhancedImaging-members.html  classrp_1_1standalone_1_1aurora_1_1EnhancedImaging.html  classrp_1_1standalone_1_1aurora_1_1EnhancedImaging.js  classrp_1_1standalone_1_1aurora_1_1FloorDetectionHistogram-members.html  classrp_1_1standalone_1_1aurora_1_1FloorDetectionHistogram.html  classrp_1_1standalone_1_1aurora_1_1FloorDetectionHistogram.js  classrp_1_1standalone_1_1aurora_1_1FloorDetector-members.html  classrp_1_1standalone_1_1aurora_1_1FloorDetector.html  classrp_1_1standalone_1_1aurora_1_1FloorDetector.js  classrp_1_1standalone_1_1aurora_1_1LIDAR2DGridMapGenerationOptions-members.html  classrp_1_1standalone_1_1aurora_1_1LIDAR2DGridMapGenerationOptions.html  classrp_1_1standalone_1_1aurora_1_1LIDAR2DGridMapGenerationOptions.js  classrp_1_1standalone_1_1aurora_1_1LIDAR2DMapBuilder-members.html  classrp_1_1standalone_1_1aurora_1_1LIDAR2DMapBuilder.html  classrp_1_1standalone_1_1aurora_1_1LIDAR2DMapBuilder.js  classrp_1_1standalone_1_1aurora_1_1Noncopyable-members.html  classrp_1_1standalone_1_1aurora_1_1Noncopyable.html  classrp_1_1standalone_1_1aurora_1_1Noncopyable.js  classrp_1_1standalone_1_1aurora_1_1OccupancyGridMap2DRef-members.html  classrp_1_1standalone_1_1aurora_1_1OccupancyGridMap2DRef.html  classrp_1_1standalone_1_1aurora_1_1OccupancyGridMap2DRef.js  classrp_1_1standalone_1_1aurora_1_1RemoteController-members.html  classrp_1_1standalone_1_1aurora_1_1RemoteController.html  classrp_1_1standalone_1_1aurora_1_1RemoteController.js  classrp_1_1standalone_1_1aurora_1_1RemoteDataProvider-members.html  classrp_1_1standalone_1_1aurora_1_1RemoteDataProvider.html  classrp_1_1standalone_1_1aurora_1_1RemoteDataProvider.js  classrp_1_1standalone_1_1aurora_1_1RemoteDeviceBasicInfo-members.html  classrp_1_1standalone_1_1aurora_1_1RemoteDeviceBasicInfo.html  classrp_1_1standalone_1_1aurora_1_1RemoteDeviceBasicInfo.js  classrp_1_1standalone_1_1aurora_1_1RemoteImageRef-members.html  (+268 more)
(+89 files in other folders)
